# data_buddy

./: .flake8  .gitignore  .vercelignore  LICENSE  README.md  app.py  app_flask.py  expenses.csv  generated_analysis.py  main_app.py  project_analyzer.py  pyproject.toml  requirements.txt  solver.py  statistics_engine.py  test_buddy.py  test_run.py  test_statistics.py  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  publish.yml  tests.yml
api/: analyze.py
data_buddy/: __init__.py  project_analyzer.py  statistics_engine.py
data_buddy/core/: cli.py  legacy.py
data_buddy/models/: insight_engine.py
data_buddy/preprocessing/: cleaner.py  loader.py
data_buddy/stats/: detector.py  statistics_engine.py
data_buddy/utils/: config.py  errors.py
data_buddy/viz/: viewer.py
src/data_buddy/: __init__.py  project_analyzer.py  statistics_engine.py
src/data_buddy/core/: buddy.py  cli.py
src/data_buddy/preprocessing/: loader.py
src/data_buddy/utils/: config.py
src/data_buddy/viz/: viewer.py
templates/: index.html
