[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_buddy"
version = "0.1.0"
authors = [
  { name="Akena Nicholas", email="akidirita4@gmail.com" },
]
description = "A professional no-code data analysis toolkit with statistical rigor."
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.0.0",
    "matplotlib>=3.0.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
