[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_buddy"
version = "2.0.0"
authors = [
  { name="Akena Nicholas", email="akidirita4@gmail.com" },
]
description = "Professional no-code data analysis toolkit with statistical rigor."
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]