[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-buddy"
version = "3.0.0"
description = "No-code data intelligence layer for Python."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Data Buddy Contributors" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.7",
  "seaborn>=0.13",
]
ml = [
  "statsmodels>=0.14",
]
dev = [
  "pytest>=7.4",
  "black>=24.0",
  "ruff>=0.5",
]

[project.scripts]
data-buddy = "data_buddy.core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_buddy*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
